# aiops-sre-agent

./: README.md  environment_config.py  main.py  pyproject.toml  requirements.txt
AI-suggestions/: commands-learnt.md
config/: capability_definitions.yaml  config_sre_agent_1.yaml  config_sre_agent_2.yaml  production.yaml
gemini_sre_agent/: __init__.py  analysis_agent.py  enhanced_remediation_agent.py  legacy_config.py  local_patch_manager.py  log_ingestion.py  log_subscriber.py  logger.py  remediation_agent.py  remediation_agent_adapter.py  resilience_core.py  triage_agent.py
gemini_sre_agent/agents/: __init__.py  agent_models.py  base.py  enhanced_analysis_agent.py  enhanced_base.py  enhanced_remediation_agent.py  enhanced_specialized.py  enhanced_triage_agent.py  optimized_base.py  request_models.py  response_models.py  specialized.py  state_models.py  stats.py  validation_models.py
gemini_sre_agent/config/: __init__.py  app_config.py  base.py  cli_tools.py  dev_utils.py  errors.py  ingestion_config.py  loader.py  manager.py  metrics.py  ml_config.py  monitoring.py  secrets.py  source_control_credentials.py  source_control_error_handling.py  source_control_error_handling_loader.py  source_control_error_handling_validation.py  source_control_global.py  source_control_remediation.py  source_control_repositories.py
gemini_sre_agent/core/: __init__.py
gemini_sre_agent/ingestion/: __init__.py
gemini_sre_agent/llm/: __init__.py  base.py  budget_manager.py  (+43 more)
instructions to be followed/: stesp.md
prompts/: prompts.json
understanding/: folder_structure.md
(+314 files in other folders)
